# mcp-sourcegraph

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
mcp_sourcegraph/: __init__.py  server.py
