[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sourcegraph"
version = "0.1.3"
description = "MCP server for Sourcegraph GraphQL API"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "0xb8001"}]
keywords = ["mcp", "sourcegraph", "code-search", "graphql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: System :: Archiving",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/0xb8001/mcp-sourcegraph"
Repository = "https://github.com/0xb8001/mcp-sourcegraph"
Issues = "https://github.com/0xb8001/mcp-sourcegraph/issues"

[project.scripts]
mcp-sourcegraph = "mcp_sourcegraph.server:cli_main"